--- a/pags/CV-carlos.html
+++ b/pags/CV-carlos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
@@ -22,18 +22,18 @@
             <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle active"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Currículos</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="./pags/CV-adriana.html" target="_blank">Adriana</a>
-                            <a class="dropdown-item" href="./pags/CV-carlos.html">Carlos</a>
-                            <a class="dropdown-item" href="./pags/CV-edward.html" target="_blank">Edward</a>
-                            <a class="dropdown-item" href="./pags/CV-joao.html" target="_blank">João Victor</a>
-                            <a class="dropdown-item" href="./pags/CV-luis.html" target="_blank">Luis</a>
-                            <a class="dropdown-item" href="./pags/CV-rafael.html" target="_blank">Rafael</a>
-                            <a class="dropdown-item" href="./pags/CV-thais.html" target="_blank">Thais</a>
+                            <a class="dropdown-item" href="CV-adriana.html">Adriana</a>
+                            <a class="dropdown-item" href="CV-carlos.html">Carlos</a>
+                            <a class="dropdown-item" href="CV-edward.html">Edward</a>
+                            <a class="dropdown-item" href="CV-joao.html">João Victor</a>
+                            <a class="dropdown-item" href="CV-luis.html">Luis</a>
+                            <a class="dropdown-item" href="CV-rafael.html">Rafael</a>
+                            <a class="dropdown-item" href="CV-thais.html">Thais</a>
                         </div>
                     </li>
                 </ul>                                  
@@ -47,7 +47,7 @@
         <section class="apresentacao__conteudo">
 
             <div class="apresentacao__conteudo__contato">
-                <img src="./assets/carlos.hsrodrigues.jpg" alt="Foto do Carlos Henrique" class="apresentacao__conteudo__contato__foto">
+                <img src="../assets/carlos.hsrodrigues.jpg" alt="Foto do Carlos Henrique" class="apresentacao__conteudo__contato__foto">
 
 
                 <div class="apresentacao__conteudo__contato__info" >
@@ -156,6 +156,9 @@
 
         </section>
     </main>        
+        <div class="lepe">
+            <div class="pele"></div>
+        </div>
     <footer class="rodape">
         <p>Desenvolvido por Carlos Henrique</p>
     </footer>
