--- a/pags/CV-thais.html
+++ b/pags/CV-thais.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
@@ -22,18 +22,18 @@
             <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle active"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Currículos</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="./pags/CV-adriana.html" target="_blank">Adriana</a>
-                            <a class="dropdown-item" href="./pags/CV-carlos.html">Carlos</a>
-                            <a class="dropdown-item" href="./pags/CV-edward.html" target="_blank">Edward</a>
-                            <a class="dropdown-item" href="./pags/CV-joao.html" target="_blank">João Victor</a>
-                            <a class="dropdown-item" href="./pags/CV-luis.html" target="_blank">Luis</a>
-                            <a class="dropdown-item" href="./pags/CV-rafael.html" target="_blank">Rafael</a>
-                            <a class="dropdown-item" href="./pags/CV-thais.html" target="_blank">Thais</a>
+                            <a class="dropdown-item" href="CV-adriana.html">Adriana</a>
+                            <a class="dropdown-item" href="CV-carlos.html">Carlos</a>
+                            <a class="dropdown-item" href="CV-edward.html">Edward</a>
+                            <a class="dropdown-item" href="CV-joao.html">João Victor</a>
+                            <a class="dropdown-item" href="CV-luis.html">Luis</a>
+                            <a class="dropdown-item" href="CV-rafael.html">Rafael</a>
+                            <a class="dropdown-item" href="CV-thais.html">Thais</a>
                         </div>
                     </li>
                 </ul>                                  
@@ -47,7 +47,7 @@
         <section class="apresentacao__conteudo">
 
             <div class="apresentacao__conteudo__contato">
-                <img src="./assets/carlos.hsrodrigues.jpg" alt="Foto do Carlos Henrique" class="apresentacao__conteudo__contato__foto">
+                <img src="../assets/thaisdspozzibon.jpg" alt="Foto da Thais de Souza Pozzibon" class="apresentacao__conteudo__contato__foto">
 
 
                 <div class="apresentacao__conteudo__contato__info" >
@@ -55,44 +55,29 @@
 
                     <div class="apresentacao__conteudo__contato__info__space">
                             <p><i class="fa-solid fa-location-dot fa-lg" style="color: #ffffff;"> </i></p>
-                            <p><address> Rua Miguel Teles Junior - Cambuci, São Paulo-SP, Brasil </address></p>                                                
+                            <p><address> # </address></p>                                                
                     </div>
 
                     <div class="apresentacao__conteudo__contato__info__space">
                          <p><i class="fa-solid fa-phone fa-lg" style="color: #ffffff;"></i></p>
-                         <p>(11) 91028-2093</p>
+                         <p>(11) 97656-5747</p>
                     </div>
 
                     <div class="apresentacao__conteudo__contato__info__space">
                         <p><i class="fa-solid fa-envelope fa-lg" style="color: #ffffff;"></i></p>
-                        <p><a href="mailto:carloshsr98@gmail.com">carloshsr98@gmail.com</a></p>
+                        <p><a href="mailto:#">#</a></p>
                     </div>
 
                     <div class="apresentacao__conteudo__contato__info__space">
                         <p><i class="fa-brands fa-linkedin fa-lg" style="color: #ffffff;"></i></p>
-                        <p><a href="https://www.linkedin.com/in/carlos-henrique-santana-rodrigues-650189274/">Perfil Profissional</a></p>
-                    </div>
-
-                    <div class="apresentacao__conteudo__contato__info__space">
-                        <p><i class="fa-brands fa-github fa-lg" style="color: #fafafa;"></i></p>
-                        <p><a href="https://github.com/CarlinhosHSR">Perfil Desenvolvimento</a></p>
+                        <p><a href="https://www.linkedin.com/in/thais-pozzibon-b31b23270">Perfil Profissional</a></p>
                     </div>
 
                     <p class="apresentacao__conteudo__contato__info__space apresentacao__conteudo__titulo">Habilidades</p>
 
                     <div class="apresentacao__conteudo__contato__info__space">
                         <p> <i class="fa-solid fa-code fa-lg" style="color: #ffffff;"></i></p>
-                        <p>HTML, CSS, JavaScript, Bootstrap</p>
-                    </div>
-
-                    <div class="apresentacao__conteudo__contato__info__space">
-                        <p><i class="fa-solid fa-database fa-lg" style="color: #ffffff;"></i></p>
-                        <p>MySQL</p>
-                    </div>
-
-                    <div class="apresentacao__conteudo__contato__info__space">
-                        <p><i class="fa-solid fa-terminal fa-lg" style="color: #ffffff;"></i></p>
-                        <p>Windows Server, Linux</p>
+                        <p>HTML, CSS, JavaScript</p>
                     </div>
 
                     <div class="apresentacao__conteudo__contato__info__space">
@@ -106,20 +91,23 @@
             
             <div class="apresentacao__conteudo__referencias">
                 <div>
-                    <p class="apresentacao__conteudo__referencias__nome">Carlos Henrique Santana Rodrigues</p>                                 
-                    <p class="apresentacao__conteudo__referencias__texto">Técnico de Suporte</p>
+                    <p class="apresentacao__conteudo__referencias__nome">Thais de Souza Pozzibon</p>                                 
+                    <p class="apresentacao__conteudo__referencias__texto">#</p>
                 </div>
                 
                 <div class="apresentacao__conteudo__referencias__titulo">
                     Sobre
-                    <p class="apresentacao__conteudo__referencias__texto"> Hoje sou técnico de suporte da Scavasin Consultoria, mas pretendo cursar Ciencia da Computação quando finalizar o Ensino Técnico no Senac em Jun/2023, é me tornar um desenvolvedor no futuro.</p>                    
+                    <p class="apresentacao__conteudo__referencias__texto">Sou formada em Administração com enfase em Comércio Exterior. Tenho 35 anos.
+                        Estou em transição de carreira e estou me dedicando a estudar  tecnologia e com o conhecimento que adquiri na area de Comércio Exterior, pretendo aplicar em tecnologia.
+                       Estou a procura de oportunidade de trabalho na area de Cloud AWS.
+                       </p>                    
                 </div>
 
                 <div class="apresentacao__conteudo__referencias__titulo">
                     Educação
                     <p class="apresentacao__conteudo__referencias__texto">
-                        2021 ~ 2023 - Técnico em Informática<br>
-                        Senac
+                        #<br>
+                        #
                     </p>
 
                     <p class="apresentacao__conteudo__referencias__texto">
@@ -127,24 +115,15 @@
                         Escola da Nuvem
                     </p>
 
-                    <p class="apresentacao__conteudo__referencias__texto">
-                        2023 - Ensino de inglês (Atualmente 05/23, estou B2 - CEFR)
-                    </p>
                 </div>
 
                 <div class="apresentacao__conteudo__referencias__titulo">
                     Carreira
-                    <p class="apresentacao__conteudo__referencias__texto">
-                        <span style="font-size: 1.65rem; font-weight: bold;">Técnico de Suporte</span><br>
-                        Scavasin Consultoria | Maio de 2023 - presente<br>
-                        <span style="font-size: 0.87rem;">Responsável pela manutenção e resolução de problemas relacionados a informática,
-                        presencialmente em predio com 6 andar de uma empresa, e remotamente em duas outras empresas</span>
-                    </p>
 
                     <p class="apresentacao__conteudo__referencias__texto">
-                        <span style="font-size: 1.65rem; font-weight: bold;">Estagiario de TI</span><br>
-                        Hospital do Notebook | Mai de 2022 - Nov de 2022<br>
-                        <span style="font-size: 0.87rem;">Responsavel pela manutenção preventiva é corretiva de notebooks, atendimento de cliente na loja, abertura e fechamento de OS, para faturamento mensal.</span>
+                        <span style="font-size: 1.65rem; font-weight: bold;">#</span><br>
+                        #<br>
+                        <span style="font-size: 0.87rem;">#</span>
                     </p>
                 </div>
 
