--- a/pags/CV-joao.html
+++ b/pags/CV-joao.html
@@ -47,7 +47,7 @@
         <section class="apresentacao__conteudo">
 
             <div class="apresentacao__conteudo__contato">
-                <img src="../assets/temporario.png" alt="Foto do Joao Victor Oliveira da Silva" class="apresentacao__conteudo__contato__foto">
+                <img src="../assets/joao.vodsilva.jpg" alt="Foto do Joao Victor Oliveira da Silva" class="apresentacao__conteudo__contato__foto">
 
 
                 <div class="apresentacao__conteudo__contato__info" >
@@ -55,7 +55,7 @@
 
                     <div class="apresentacao__conteudo__contato__info__space">
                             <p><i class="fa-solid fa-location-dot fa-lg" style="color: #ffffff;"> </i></p>
-                            <p><address> # </address></p>                                                
+                            <p><address>Rua São francisco de paula, Belford Roxo, Rio de Janeiro</address></p>                                                
                     </div>
 
                     <div class="apresentacao__conteudo__contato__info__space">
@@ -65,12 +65,12 @@
 
                     <div class="apresentacao__conteudo__contato__info__space">
                         <p><i class="fa-solid fa-envelope fa-lg" style="color: #ffffff;"></i></p>
-                        <p><a href="mailto:#">#</a></p>
+                        <p><a href="mailto:johnvic_jv_@hotmail.com.br">johnvic_jv_@hotmail.com.br</a></p>
                     </div>
 
                     <div class="apresentacao__conteudo__contato__info__space">
                         <p><i class="fa-brands fa-linkedin fa-lg" style="color: #ffffff;"></i></p>
-                        <p><a href="#">Perfil Profissional</a></p>
+                        <p><a href="https://www.linkedin.com/in/jo%C3%A3o-victor-oliveira-da-silva-51a303253/">Perfil Profissional</a></p>
                     </div>
 
                     <p class="apresentacao__conteudo__contato__info__space apresentacao__conteudo__titulo">Habilidades</p>
@@ -104,8 +104,8 @@
                     Educação
 
                     <p class="apresentacao__conteudo__referencias__texto">
-                        Análise e Desenvolvimento de Sistemas<br>
-                        #
+                        2023 - Análise e Desenvolvimento de Sistemas<br>
+                        Estácio
                     </p>
                     <p class="apresentacao__conteudo__referencias__texto">
                         2023 - Fundamentos AWS<br>
@@ -113,7 +113,7 @@
                     </p>
                     <p class="apresentacao__conteudo__referencias__texto">
                         Sistema Elite de Ensino<br>
-                        #
+                        Ensino Médio
                     </p>
 
                 </div>
