--- a/pags/CV-joao.html
+++ b/pags/CV-joao.html
@@ -55,7 +55,7 @@
 
                     <div class="apresentacao__conteudo__contato__info__space">
                             <p><i class="fa-solid fa-location-dot fa-lg" style="color: #ffffff;"> </i></p>
-                            <p><address>Rua São francisco de paula, Belford Roxo, Rio de Janeiro</address></p>                                                
+                            <p><address>Rua São Francisco de Paula, Belford Roxo, Rio de Janeiro</address></p>                                                
                     </div>
 
                     <div class="apresentacao__conteudo__contato__info__space">
@@ -74,11 +74,6 @@
                     </div>
 
                     <p class="apresentacao__conteudo__contato__info__space apresentacao__conteudo__titulo">Habilidades</p>
-
-                    <div class="apresentacao__conteudo__contato__info__space">
-                        <p> <i class="fa-solid fa-wifi fa-lg" style="color: #ffffff;"></i></p>
-                        <p>Redes</p>
-                    </div>
 
                     <div class="apresentacao__conteudo__contato__info__space">
                         <p><i class="fa-solid fa-cloud fa-lg" style="color: #ffffff;"></i></p>
