--- a/pags/CV-adriana.html
+++ b/pags/CV-adriana.html
@@ -31,7 +31,7 @@
                             <a class="dropdown-item" href="CV-carlos.html">Carlos</a>
                             <a class="dropdown-item" href="CV-edward.html">Edward</a>
                             <a class="dropdown-item" href="CV-joao.html">João Victor</a>
-                            <a class="dropdown-item" href="CV-luis.html">Luis</a>
+                            
                             <a class="dropdown-item" href="CV-rafael.html">Rafael</a>
                             <a class="dropdown-item" href="CV-thais.html">Thais</a>
                         </div>
@@ -55,7 +55,7 @@
 
                     <div class="apresentacao__conteudo__contato__info__space">
                             <p><i class="fa-solid fa-location-dot fa-lg" style="color: #ffffff;"> </i></p>
-                            <p><address> # </address></p>                                                
+                            <p><address>Portugal</address></p>                                                
                     </div>
 
                     <div class="apresentacao__conteudo__contato__info__space">
@@ -63,10 +63,6 @@
                          <p>(+351) 91085-3492</p>
                     </div>
 
-                    <div class="apresentacao__conteudo__contato__info__space">
-                        <p><i class="fa-solid fa-envelope fa-lg" style="color: #ffffff;"></i></p>
-                        <p><a href="mailto:#"> # </a></p>
-                    </div>
 
                     <div class="apresentacao__conteudo__contato__info__space">
                         <p><i class="fa-brands fa-linkedin fa-lg" style="color: #ffffff;"></i></p>
@@ -92,7 +88,6 @@
             <div class="apresentacao__conteudo__referencias">
                 <div>
                     <p class="apresentacao__conteudo__referencias__nome">Adriana Seppa Fiorani</p>                                 
-                    <p class="apresentacao__conteudo__referencias__texto">#</p>
                 </div>
                 
                 <div class="apresentacao__conteudo__referencias__titulo">
