--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle active"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Currículos</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="./pags/CV-adriana.html" target="_blank">Adriana</a>
+                            <a class="dropdown-item" href="./pags/CV-adriana.html">Adriana</a>
                             <a class="dropdown-item" href="./pags/CV-carlos.html">Carlos</a>
-                            <a class="dropdown-item" href="./pags/CV-edward.html" target="_blank">Edward</a>
-                            <a class="dropdown-item" href="./pags/CV-joao.html" target="_blank">João Victor</a>
+                            <a class="dropdown-item" href="./pags/CV-edward.html">Edward</a>
+                            <a class="dropdown-item" href="./pags/CV-joao.html">João Victor</a>
                             
-                            <a class="dropdown-item" href="./pags/CV-rafael.html" target="_blank">Rafael</a>
-                            <a class="dropdown-item" href="./pags/CV-thais.html" target="_blank">Thais</a>
+                            <a class="dropdown-item" href="./pags/CV-rafael.html">Rafael</a>
+                            <a class="dropdown-item" href="./pags/CV-thais.html">Thais</a>
                         </div>
                     </li>
                 </ul>                                  
