--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <a class="dropdown-item" href="./pags/CV-carlos.html">Carlos</a>
                             <a class="dropdown-item" href="./pags/CV-edward.html">Edward</a>
                             <a class="dropdown-item" href="./pags/CV-joao.html">João Victor</a>
-                            
+                            <a class="dropdown-item" href="./pags/CV-luis.html">Luis Aguera</a>
                             <a class="dropdown-item" href="./pags/CV-rafael.html">Rafael</a>
                             <a class="dropdown-item" href="./pags/CV-thais.html">Thais</a>
                         </div>
