--- a/pags/CV-carlos.html
+++ b/pags/CV-carlos.html
@@ -31,7 +31,7 @@
                             <a class="dropdown-item" href="CV-carlos.html">Carlos</a>
                             <a class="dropdown-item" href="CV-edward.html">Edward</a>
                             <a class="dropdown-item" href="CV-joao.html">João Victor</a>
-                            
+                            <a class="dropdown-item" href="./pags/CV-luis.html">Luis Aguera</a>
                             <a class="dropdown-item" href="CV-rafael.html">Rafael</a>
                             <a class="dropdown-item" href="CV-thais.html">Thais</a>
                         </div>
